<resources>
    <string name="app_name">4HBButtons</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
    <string name="select_a_device">Select a device</string>
    <string name="connecting">Connecting …</string>
    <string name="left_up">Left Up</string>
    <string name="right_up">Right Up</string>
    <string name="left_down">Left Down</string>
    <string name="right_down">Right Down</string>
</resources>
