<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Toolbar
            android:id="@+id/my_toolbar"
            android:title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:context=".MainActivity"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            app:layout_constraintBottom_toBottomOf="parent" tools:layout_editor_absoluteX="0dp"
            app:layout_constraintVertical_bias="0.0">
        <Button
                android:text="@string/left_up"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/leftTopBtn" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/right_up"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/rightTopBtn" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/left_down"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/leftBottomBtn" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <Button
                android:text="@string/right_down"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/rightBottomBtn" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="Selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectBtn" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <SeekBar
                android:layout_width="300dp"
                android:splitTrack="false"
                android:progressDrawable="@drawable/slider_progress"
                android:layout_height="wrap_content"
                android:id="@+id/speedSeekBar" android:layout_marginTop="34dp"
                app:layout_constraintTop_toBottomOf="@+id/selectBtn" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:thumb="@drawable/slider_thumb" android:max="255"
                android:progress="0"/>
        <TextView
                android:text="@string/_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressTV" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/speedSeekBar" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/select_a_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deviceTextView"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/selectBtn" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>